@@ -4,6 +4,9 @@ Changes in Version 0.6-12
  o the 'style' argument to layer() now applies to the "superpose" styles
    also, which fixes some cases with xyplot.ts.
 
+ o the 'zoo' methods for panel.xblocks() and panel.xyarea() now use 
+   coredata() rather than as.vector(), so can keep factors intact.
+
 Changes in Version 0.6-10
 
  o support arrows with panel.segplot.
